feat: add IGSN metadata search filters
