# app/Http/Requests/PortalMapRequest.php
@@ -57,6 +57,16 @@ final class PortalMapRequest extends FormRequest
             'free_keywords.*' => ['string', 'max:255'],
             'thesaurus_keywords' => ['sometimes', 'array', 'max:20'],
             'thesaurus_keywords.*' => ['string', 'max:2048'],
+            'sample_types' => ['sometimes', 'array', 'max:20'],
+            'sample_types.*' => ['string', 'max:255'],
+            'materials' => ['sometimes', 'array', 'max:20'],
+            'materials.*' => ['string', 'max:255'],
+            'classifications' => ['sometimes', 'array', 'max:20'],
+            'classifications.*' => ['string', 'max:255'],
+            'geological_ages' => ['sometimes', 'array', 'max:20'],
+            'geological_ages.*' => ['string', 'max:255'],
+            'geological_units' => ['sometimes', 'array', 'max:20'],
+            'geological_units.*' => ['string', 'max:255'],
             'datacenter' => ['sometimes', 'array', 'max:20'],
             'datacenter.*' => ['string', 'max:255'],
             'date_type' => ['nullable', 'string', 'in:Created,Collected,Coverage'],
